# pypilot-controller

./: .gitignore  PyPilotController.gaphor  README.md
pypilot-controller/: Cargo.toml  mkhex.sh  mklss.sh  program.sh
pypilot-controller/.cargo/: config.toml
pypilot-controller/src/: adc.rs  crc.rs  eeprom.rs  main.rs  nanopwm.rs  packet.rs  serial.rs  utility.rs
pypilot_controller_board/: Cargo.toml  py-pilot-controller-runner.sh
pypilot_controller_board/.cargo/: config.toml
pypilot_controller_board/examples/: ppc-adc.rs  ppc-blink.rs  ppc-millis.rs  ppc-panic.rs  ppc-serial.rs  ppc-spi-feedback.rs  ppc-watchdog.rs
pypilot_controller_board/src/: lib.rs  pins.rs
scripts/: crc8.py  dutgui.py
