[package]
name = "pypilot-controller"
version = "0.1.0"
authors = ["Greg Green <ggreen@bit-builder.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serial_packets = []
motor_temp = []
controller_temp = []
rudder_angle = []
rudder_stops = []
default = ["serial_packets","rudder_stops"]

[dependencies]
avr-device = "0.3"
bitflags = "1.2"
embedded-hal = "0.2.3"
heapless = "0.7"
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "c503373c2b334a41d74b63a052133f5f484040c7"
features = ["arduino-nano"]

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal"
rev = "c503373c2b334a41d74b63a052133f5f484040c7"

# the following is a hack for link error during debug builds
# rust-lang/compiler-builtins#347
[profile.dev.package.compiler_builtins]
overflow-checks = false

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"